Add shortcut to toggle touchpad
Add shortcut and corresponding script to toggle touchpad activation.

--- a/.i3/config
+++ b/.i3/config
@@ -197,6 +197,7 @@ bindsym XF86MonBrightnessDown exec --no-startup-id "light -U 5 && pkill -RTMIN+1
 bindsym XF86AudioRaiseVolume exec "amixer -D pulse sset Master '2%+' && pkill -RTMIN+10 i3blocks"
 bindsym XF86AudioLowerVolume exec "amixer -D pulse sset Master '2%-' && pkill -RTMIN+10 i3blocks"
 bindsym XF86AudioMute exec "amixer -D pulse set Master toggle && pkill -RTMIN+10 i3blocks"
+bindsym XF86TouchpadToggle exec --no-startup-id "/home/saumon/scripts/toggletouchpad.sh"
 
 for_window [class="(?i)galculator"] floating enable
 for_window [window_role="(?i)pop-up"] floating enable
