--- a/.i3/config
+++ b/.i3/config
@@ -184,11 +184,11 @@ bindsym mod4+e exec thunar
 bindsym mod4+KP_Enter exec galculator
 bindsym mod4+w exec dmenu_run -nb '#111111' -nf '#ffffff' -sb '#CD5728' -fn 'Noto Sans-11'
 bindsym mod4+f exec firefox
-bindsym mod4+l exec /home/saumon/scripts/lock.sh
+bindsym mod4+l exec /data/Scripts/lock.sh
 
 bindsym mod4+c exec clipster -s
 
-bindsym mod4+End exec /home/saumon/scripts/lock.sh && systemctl suspend
+bindsym mod4+End exec /data/Scripts/lock.sh && systemctl suspend
 
 bindsym F11 fullscreen toggle
 
@@ -197,7 +197,7 @@ bindsym XF86MonBrightnessDown exec --no-startup-id "light -U 5 && pkill -RTMIN+1
 bindsym XF86AudioRaiseVolume exec "amixer -D pulse sset Master '2%+' && pkill -RTMIN+10 i3blocks"
 bindsym XF86AudioLowerVolume exec "amixer -D pulse sset Master '2%-' && pkill -RTMIN+10 i3blocks"
 bindsym XF86AudioMute exec "amixer -D pulse set Master toggle && pkill -RTMIN+10 i3blocks"
-bindsym XF86TouchpadToggle exec --no-startup-id "/home/saumon/scripts/toggletouchpad.sh"
+bindsym XF86TouchpadToggle exec --no-startup-id "/data/Scripts/toggletouchpad.sh"
 
 for_window [class="(?i)galculator"] floating enable
 for_window [window_role="(?i)pop-up"] floating enable
@@ -206,7 +206,7 @@ for_window [window_role="About"] floating enable
 for_window [class="Firefox"] border pixel 1
 
 
-bindsym Print exec /home/saumon/scripts/screenshot.sh
+bindsym Print exec /data/Scripts/screenshot.sh
 
 bindsym Mod1+F4 kill
 
