--- a/.i3/config
+++ b/.i3/config
@@ -16,6 +16,7 @@ set $workspace7 " 7 "
 set $workspace8 " 8 "
 set $workspace9 " 9 "
 set $workspace10 " 10 "
+set $terminal "xfce4-terminal"
 
 
 # FONT
@@ -188,15 +189,18 @@ bindsym $super+KP_Enter exec galculator
 bindsym $super+w exec dmenu_run -nb '#1c3542' -nf '#dddddd' -sb '#12846e' -fn 'Noto Sans-11'
 bindsym $super+f exec firefox
 
-bindsym $mod+Return exec xfce4-terminal
+bindsym $mod+Return exec $terminal
 bindsym $super+c exec clipster -s
 
 
 
 # STARTUP
 
-exec --no-startup-id feh --bg-fill /home/saumon/static/wallpaper/straight.jpeg
+exec --no-startup-id i3-msg 'workspace $workspace1; append_layout /home/saumon/.i3/startuplayout.json'
 exec firefox
+exec $terminal
+
+exec --no-startup-id feh --bg-fill /home/saumon/static/wallpaper/straight.jpeg
 exec --no-startup-id xset r rate 185 26
 exec --no-startup-id dunst
 exec --no-startup-id clipster -d
