--- a/.i3/config
+++ b/.i3/config
@@ -162,6 +162,7 @@ hide_edge_borders both
 for_window [class="(?i)galculator"] floating enable
 for_window [window_role="(?i)pop-up"] floating enable
 for_window [window_role="(?i)about"] floating enable
+for_window [title="Network Operations Manager"] floating enable
 
 for_window [class="Firefox"] border pixel 1
 
