--- a/.i3/config
+++ b/.i3/config
@@ -189,6 +189,7 @@ bindsym $super+e exec thunar
 bindsym $super+KP_Enter exec galculator
 bindsym $super+w exec dmenu_run -nb '#1c3542' -nf '#dddddd' -sb '#12846e' -fn 'Noto Sans-11'
 bindsym $super+f exec firefox
+bindsym $super+s exec subl3
 
 bindsym $mod+Return exec $terminal
 bindsym $super+c exec clipster -s
