--- a/.i3/config
+++ b/.i3/config
@@ -7,16 +7,16 @@
 set $mod Mod1
 set $alt Mod1
 set $super Mod4
-set $workspace1 " 1 "
-set $workspace2 " 2 "
-set $workspace3 " 3 "
-set $workspace4 " 4 "
-set $workspace5 " 5 "
-set $workspace6 " 6 "
-set $workspace7 " 7 "
-set $workspace8 " 8 "
-set $workspace9 " 9 "
-set $workspace10 " 10 "
+set $ws1 " 1 "
+set $ws2 " 2 "
+set $ws3 " 3 "
+set $ws4 " 4 "
+set $ws5 " 5 "
+set $ws6 " 6 "
+set $ws7 " 7 "
+set $ws8 " 8 "
+set $ws9 " 9 "
+set $ws10 " 10 "
 set $terminal "xfce4-terminal"
 
 
@@ -63,29 +63,29 @@ bindsym $mod+d focus child
 
 
 # SWITCH TO WORKSPACE
-bindcode $mod+10 workspace $workspace1
-bindcode $mod+11 workspace $workspace2
-bindcode $mod+12 workspace $workspace3
-bindcode $mod+13 workspace $workspace4
-bindcode $mod+14 workspace $workspace5
-bindcode $mod+15 workspace $workspace6
-bindcode $mod+16 workspace $workspace7
-bindcode $mod+17 workspace $workspace8
-bindcode $mod+18 workspace $workspace9
-bindcode $mod+19 workspace $workspace10
+bindcode $mod+10 workspace $ws1
+bindcode $mod+11 workspace $ws2
+bindcode $mod+12 workspace $ws3
+bindcode $mod+13 workspace $ws4
+bindcode $mod+14 workspace $ws5
+bindcode $mod+15 workspace $ws6
+bindcode $mod+16 workspace $ws7
+bindcode $mod+17 workspace $ws8
+bindcode $mod+18 workspace $ws9
+bindcode $mod+19 workspace $ws10
 
 
 # MOVE TO WORKSPACE
-bindcode $mod+Shift+10 move container to workspace $workspace1
-bindcode $mod+Shift+11 move container to workspace $workspace2
-bindcode $mod+Shift+12 move container to workspace $workspace3
-bindcode $mod+Shift+13 move container to workspace $workspace4
-bindcode $mod+Shift+14 move container to workspace $workspace5
-bindcode $mod+Shift+15 move container to workspace $workspace6
-bindcode $mod+Shift+16 move container to workspace $workspace7
-bindcode $mod+Shift+17 move container to workspace $workspace8
-bindcode $mod+Shift+18 move container to workspace $workspace9
-bindcode $mod+Shift+19 move container to workspace $workspace10
+bindcode $mod+Shift+10 move container to workspace $ws1
+bindcode $mod+Shift+11 move container to workspace $ws2
+bindcode $mod+Shift+12 move container to workspace $ws3
+bindcode $mod+Shift+13 move container to workspace $ws4
+bindcode $mod+Shift+14 move container to workspace $ws5
+bindcode $mod+Shift+15 move container to workspace $ws6
+bindcode $mod+Shift+16 move container to workspace $ws7
+bindcode $mod+Shift+17 move container to workspace $ws8
+bindcode $mod+Shift+18 move container to workspace $ws9
+bindcode $mod+Shift+19 move container to workspace $ws10
 
 
 # Reload the configuration file
