Fix wrong workspace variable at launch

--- a/.i3/config
+++ b/.i3/config
@@ -199,7 +199,7 @@ bindsym $super+c exec clipster -s
 
 # STARTUP
 
-exec --no-startup-id i3-msg 'workspace $workspace1; append_layout /home/saumon/.i3/startuplayout.json'
+exec --no-startup-id i3-msg 'workspace $ws1; append_layout /home/saumon/.i3/startuplayout.json'
 exec firefox
 exec $terminal
 
