--- a/.zpreztorc
+++ b/.zpreztorc
@@ -36,6 +36,7 @@ zstyle ':prezto:load' pmodule \
   'screen' \
   'completion' \
   'history-substring-search' \
+  'autosuggestions' \
   'prompt'
 
 #
