--- a/.gitconfig
+++ b/.gitconfig
@@ -6,9 +6,13 @@
 [alias]
 	cm = commit --verbose
 	cmm = commit --verbose -m
+	st = status
+	p = pull
+	pa = pull --all
+	c = checkout
  	amend = commit --amend --no-edit --reset-author
 	tree = log --graph --full-history --all --pretty=format:"%h%x09%d%x20%s"
-	st = status
 	abort = rebase --abort
 	continue = rebase --continue
 	re = !git fetch && git rebase origin/master
+	set-upstream = !git branch --set-upstream-to=origin/`git symbolic-ref --short HEAD`
