--- a/i3/config
+++ b/i3/config
@@ -166,6 +166,8 @@ for_window [window_role="(?i)pop-up"] floating enable
 for_window [window_role="(?i)about"] floating enable
 for_window [title="Network Operations Manager"] floating enable
 
+for_window [class="WireFrame"] floating enable
+
 for_window [class="Firefox"] border pixel 1
 
 
@@ -173,7 +175,7 @@ for_window [class="Firefox"] border pixel 1
 
 bindsym $mod+Shift+A kill
 bindsym $super+l exec --no-startup-id "xautolock -locknow"
-bindcode 37+9 exec --no-startup-id "xautolock -locknow"
+bindcode 135 exec --no-startup-id "xautolock -locknow"
 bindsym $mod+f fullscreen toggle
 bindsym F11 fullscreen toggle
 
