--- a/i3/config
+++ b/i3/config
@@ -166,6 +166,7 @@ for_window [class="(?i)galculator"] floating enable
 for_window [window_role="(?i)pop-up"] floating enable
 for_window [window_role="(?i)about"] floating enable
 for_window [title="Network Operations Manager"] floating enable
+for_window [title="Volume Control"] floating enable
 
 for_window [class="WireFrame"] floating enable
 
