--- a/i3/config
+++ b/i3/config
@@ -210,4 +210,5 @@ exec --no-startup-id "clipster -d"
 exec --no-startup-id "redshift -l 48.8075:2.2620"
 exec --no-startup-id "compton --config /data/.config/compton.conf -b"
 exec --no-startup-id "xautolock -locker '/data/scripts/lock.sh' -time 2"
+exec --no-startup-id "dunst"
 exec --no-startup-id "setxkbmap -option \"caps:swapescape\""
