--- a/i3/config
+++ b/i3/config
@@ -180,8 +180,6 @@ for_window [window_role="(?i)about"] floating enable
 for_window [title="Network Operations Manager"] floating enable
 for_window [title="Volume Control"] floating enable
 
-for_window [class="WireFrame"] floating enable
-
 
 # SHORTCUTS: misc
 
@@ -204,7 +202,7 @@ bindsym Print exec --no-startup-id "/data/scripts/screenshot.sh"
 
 bindsym $super+e exec "thunar"
 bindsym $super+w exec --no-startup-id "rofi -show run"
-bindsym $super+f exec "firefox"
+bindsym $super+f exec "chromium"
 
 #bindsym $mod+Return exec "gnome-calculator"
 bindsym $mod+Return exec $terminal
@@ -219,6 +217,7 @@ exec_always --no-startup-id "xset r rate 180 26"
 exec_always --no-startup-id "xset b 100 600 50"
 exec_always --no-startup-id "xset m 7/4 100"
 # exec --no-startup-id dunst
+exec --no-startup-id "nm-applet"
 exec --no-startup-id "clipster -d"
 exec --no-startup-id "redshift -l 48.8075:2.2620"
 exec --no-startup-id "compton --config /data/.config/compton.conf -b"
