--- a/i3/config
+++ b/i3/config
@@ -179,6 +179,7 @@ for_window [window_role="(?i)pop-up"] floating enable
 for_window [window_role="(?i)about"] floating enable
 for_window [title="Network Operations Manager"] floating enable
 for_window [title="Volume Control"] floating enable
+for_window [title="Segfault Simulator"] floating enable
 
 
 # SHORTCUTS: misc
