--- a/i3/config
+++ b/i3/config
@@ -190,10 +190,6 @@ bindsym $super+l exec --no-startup-id "/data/scripts/lock.sh"
 bindsym $mod+f fullscreen toggle
 bindsym F11 fullscreen toggle
 
-# SHORTCUTS: cancer
-bindsym $ctrl+$shift+a exec --no-startup-id "play /data/static/cancer/AH.mp3"
-bindsym $ctrl+$shift+e exec --no-startup-id "play /data/static/cancer/EQUILIBRE.wav"
-
 bindcode 232 exec --no-startup-id "BLOCK_BUTTON=5 /data/scripts/i3/brightness && pkill -RTMIN+11 i3blocks"
 bindcode 233 exec --no-startup-id "BLOCK_BUTTON=4 /data/scripts/i3/brightness && pkill -RTMIN+11 i3blocks"
 bindsym XF86AudioMute exec --no-startup-id "BLOCK_BUTTON=3 /data/scripts/i3/volume && pkill -RTMIN+10 i3blocks"
@@ -201,6 +197,14 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id "BLOCK_BUTTON=4 /data/scripts/
 bindsym XF86AudioLowerVolume exec --no-startup-id "BLOCK_BUTTON=5 /data/scripts/i3/volume && pkill -RTMIN+10 i3blocks"
 # bindsym XF86TouchpadToggle exec --no-startup-id "/data/Scripts/toggletouchpad.sh"
 bindsym Print exec --no-startup-id "/data/scripts/screenshot.sh"
+
+
+# SHORTCUTS: cancer
+
+bindsym $ctrl+$shift+a exec --no-startup-id "play /data/static/cancer/AH.mp3"
+bindcode 135 exec --no-startup-id "play /data/static/cancer/AH.mp3"
+bindsym $ctrl+$shift+e exec --no-startup-id "play /data/static/cancer/EQUILIBRE.wav"
+bindcode $ctrl+135 exec --no-startup-id "play /data/static/cancer/EQUILIBRE.wav"
 
 
 # SHORTCUTS: programs
