--- a/i3/config
+++ b/i3/config
@@ -227,7 +227,7 @@ exec_always --no-startup-id "xset b 100 600 50"
 exec_always --no-startup-id "xset m 7/4 100"
 # exec --no-startup-id dunst
 exec --no-startup-id "nm-applet"
-exec --no-startup-id "clipster -d"
+exec --no-startup-id "clipster -dp"
 exec --no-startup-id "redshift -l 48.8075:2.2620"
 exec --no-startup-id "compton --config /data/.config/compton.conf -b"
 exec --no-startup-id "xautolock -locker '/data/scripts/lock.sh' -time 2"
