Move i3 config to XDG-compliant directory (~/.config/i3)

--- a/config/i3/config
+++ b/config/i3/config
@@ -146,7 +146,7 @@ mode "resize" {
 # BAR
 
 bar {
-    status_command i3blocks -c /data/.i3/blocks
+    status_command i3blocks -c /data/.config/i3/blocks
     position bottom
     font pango:Noto Sans, Awesome 13
 
