Update repository URL in header

--- a/config/i3/config
+++ b/config/i3/config
@@ -1,6 +1,6 @@
 # vim: set et ts=4 sts=4 sw=4:
 
-# Saumon i3 config file - https://github.com/maximelouet/config
+# Saumon i3 config file - https://github.com/maximelouet/dotfiles
 
 
 # ALIASES
