Restore touchpad toggle shortcut even though I don't have this key anymore

--- a/config/i3/config
+++ b/config/i3/config
@@ -195,7 +195,7 @@ bindcode 233 exec --no-startup-id "BLOCK_BUTTON=4 /data/scripts/i3/brightness &&
 bindsym XF86AudioMute exec --no-startup-id "BLOCK_BUTTON=3 /data/scripts/i3/volume && pkill -RTMIN+10 i3blocks"
 bindsym XF86AudioRaiseVolume exec --no-startup-id "BLOCK_BUTTON=4 /data/scripts/i3/volume && pkill -RTMIN+10 i3blocks"
 bindsym XF86AudioLowerVolume exec --no-startup-id "BLOCK_BUTTON=5 /data/scripts/i3/volume && pkill -RTMIN+10 i3blocks"
-# bindsym XF86TouchpadToggle exec --no-startup-id "/data/Scripts/toggletouchpad.sh"
+ bindsym XF86TouchpadToggle exec --no-startup-id "/data/scripts/toggletouchpad.sh"
 bindsym Print exec --no-startup-id "/data/scripts/screenshot.sh"
 bindsym $super+Print exec --no-startup-id "/data/scripts/fscreenshot.sh"
 bindsym XF86Display exec lxrandr
