--- a/config/i3/config
+++ b/config/i3/config
@@ -239,4 +239,5 @@ exec --no-startup-id "clipster -dp"
 exec --no-startup-id "redshift -l 48.8075:2.2620"
 exec --no-startup-id "compton --config /data/.config/compton.conf -b"
 exec --no-startup-id "dunst"
+exec --no-startup-id "udiskie -c /data/.config/udiskie/config.yml"
 exec --no-startup-id "setxkbmap -option \"caps:swapescape\""
