--- a/config/i3/config
+++ b/config/i3/config
@@ -233,7 +233,7 @@ exec_always --no-startup-id "xset r rate 180 26"
 exec_always --no-startup-id "xset b 100 600 50"
 exec_always --no-startup-id "xset m 7/4 100"
 exec --no-startup-id "nm-applet"
-exec --no-startup-id "clipster -f /data/.config/clipster/clipster.ini"
+exec --no-startup-id "clipster -d -f /data/.config/clipster/clipster.ini"
 exec --no-startup-id "redshift -l 48.8075:2.2620"
 exec --no-startup-id "compton --config /data/.config/compton.conf -b"
 exec --no-startup-id "dunst"
