--- a/config/i3/config
+++ b/config/i3/config
@@ -211,6 +211,7 @@ bindsym $super+Print exec --no-startup-id "$home/scripts/fscreenshot.sh"
 
 bindcode 135 exec --no-startup-id "play $home/static/cancer/AH.mp3"
 bindcode $ctrl+135 exec --no-startup-id "play $home/static/cancer/EQUILIBRE.wav"
+bindcode $alt+135 exec --no-startup-id "play $home/static/cancer/wdatsm.mp3"
 
 
 # SHORTCUTS: programs
