Add alias_noob and alias_saumon functions for Asteks

--- a/config/i3/config
+++ b/config/i3/config
@@ -244,4 +244,4 @@ exec --no-startup-id "redshift -l 48.8075:2.2620"
 exec --no-startup-id "compton --config $home/.config/compton.conf -b"
 exec --no-startup-id "dunst"
 exec --no-startup-id "udiskie -c $home/.config/udiskie/config.yml"
-exec --no-startup-id "setxkbmap -option \"caps:swapescape\""
+exec_always --no-startup-id "setxkbmap -option caps:swapescape"
