--- a/config/i3/config
+++ b/config/i3/config
@@ -204,8 +204,9 @@ bindcode $alt+135 exec --no-startup-id "play ~/static/cancer/wdatsm.mp3"
 # SHORTCUTS: programs
 
 bindsym $super+e exec "thunar"
-bindsym $super+w exec --no-startup-id "rofi -show run"
 bindsym $super+f exec "chromium"
+
+bindsym $super+w exec --no-startup-id zsh -c "rofi -show run"
 
 # bindsym $mod+Return exec "gnome-calculator"
 bindsym $mod+Return exec $terminal
