Add Epitech C++ config

--- a/config/i3/config
+++ b/config/i3/config
@@ -228,7 +228,7 @@ exec_always --no-startup-id "xset b off"
 exec_always --no-startup-id "xset m 7/4 100"
 exec --no-startup-id "nm-applet"
 exec --no-startup-id "clipster -d -f ~/.config/clipster/clipster.ini"
-exec --no-startup-id "redshift -l 48.8075:2.2620"
+exec_always --no-startup-id "redshift -l 48.8075:2.2620"
 exec --no-startup-id "compton --config ~/.config/compton.conf -b"
 exec --no-startup-id "dunst"
 exec --no-startup-id "udiskie -c ~/.config/udiskie/config.yml"
