Update MPD config

--- a/etc/mpd.conf
+++ b/etc/mpd.conf
@@ -4,7 +4,8 @@ pid_file "/run/mpd/mpd.pid"
 db_file "/var/lib/mpd/mpd.db"
 state_file "/var/lib/mpd/mpdstate"
 playlist_directory "/var/lib/mpd/playlists"
-music_directory "/data/music"
+
+music_directory "/home/saumon/music"
 
 audio_output {
   type		"pulse"
