--- a/config/i3/config
+++ b/config/i3/config
@@ -171,6 +171,7 @@ for_window [class="Gedit"] floating enable
 for_window [class="Gpicview"] floating enable
 for_window [class="imv"] floating enable
 for_window [class="File-roller"] floating enable
+for_window [class="Lxappearance"] floating enable
 for_window [window_role="(?i)pop-up"] floating enable
 for_window [window_role="(?i)about"] floating enable
 for_window [title="Network Operations Manager"] floating enable
@@ -196,9 +197,9 @@ bindsym $super+Print exec --no-startup-id "~/scripts/fscreenshot.sh"
 
 # SHORTCUTS: cancer
 
-bindcode 135 exec --no-startup-id "play ~/static/cancer/AH.mp3"
-bindcode $ctrl+135 exec --no-startup-id "play ~/static/cancer/EQUILIBRE.wav"
-bindcode $alt+135 exec --no-startup-id "play ~/static/cancer/google-it.mp3"
+bindcode 135 exec --no-startup-id "play ~/cancer/AH.mp3"
+bindcode $ctrl+135 exec --no-startup-id "play ~/cancer/EQUILIBRE.wav"
+bindcode $alt+135 exec --no-startup-id "play ~/cancer/google-it.mp3"
 
 
 # SHORTCUTS: programs
@@ -216,8 +217,9 @@ bindsym $super+c exec "clipster -s"
 
 # ASSIGNMENTS
 
-assign [class="Caprine"] $ws3
-assign [class="Slack"] $ws4
+assign [class="(?i)caprine"] $ws3
+assign [class="(?i)discord"] $ws3
+assign [class="(?i)slack"] $ws4
 
 
 # STARTUP
@@ -228,7 +230,7 @@ exec_always --no-startup-id "xset b off"
 exec_always --no-startup-id "xset m 7/4 100"
 exec --no-startup-id "nm-applet"
 exec --no-startup-id "clipster -d -f ~/.config/clipster/clipster.ini"
-exec_always --no-startup-id "redshift -l 48.8075:2.2620"
+exec --no-startup-id "redshift -l 48.8075:2.2620"
 exec --no-startup-id "compton --config ~/.config/compton.conf -b"
 exec --no-startup-id "dunst"
 exec --no-startup-id "udiskie -c ~/.config/udiskie/config.yml"
