Update pacman.conf since reinstall

--- a/etc/pacman.conf
+++ b/etc/pacman.conf
@@ -23,7 +23,7 @@ HoldPkg     = pacman glibc
 Architecture = auto
 
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
-IgnorePkg   = ttf-ms-win10
+#IgnorePkg   =
 #IgnoreGroup =
 
 #NoUpgrade   =
@@ -34,9 +34,8 @@ IgnorePkg   = ttf-ms-win10
 Color
 TotalDownload
 CheckSpace
-#VerbosePkgLists
-
 ILoveCandy
+#VerbosePkgLists
 
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
@@ -92,8 +91,8 @@ Include = /etc/pacman.d/mirrorlist
 #[multilib-testing]
 #Include = /etc/pacman.d/mirrorlist
 
-[multilib]
-Include = /etc/pacman.d/mirrorlist
+#[multilib]
+#Include = /etc/pacman.d/mirrorlist
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
