--- a/config/i3/config
+++ b/config/i3/config
@@ -171,6 +171,7 @@ new_window none
 for_window [class="Gnome-calculator"] floating enable
 for_window [class="Gedit"] floating enable
 for_window [class="Gpicview"] floating enable
+for_window [class="Parole"] floating enable
 for_window [class="imv"] floating enable
 for_window [class="File-roller"] floating enable
 for_window [class="Lxappearance"] floating enable
